<resources>
    <string name="app_name">知乎</string>

    <string name="title_home">首页</string>
    <string name="title_dashboard">我的</string>
    <string name="title_notifications">消息</string>
    <string name="title_idea">想法</string>

    <string name="home_search_hint">搜索知乎内容</string>
    <string name="home_search_ask">提问</string>

    <string name="home_tab_follow">关注</string>
    <string name="home_tab_recommend">推荐</string>
    <string name="home_tab_hot">热榜</string>

    <string name="mine_personal_page">个人主页</string>
    <string name="mine_title_create">我的创作</string>
    <string name="mine_title_follow">关注</string>
    <string name="mine_title_collection">收藏夹</string>
    <string name="mine_title_history">最近浏览</string>

    <string name="mine_title_community">社区建设</string>
    <string name="mine_title_opinion_and_help">反馈与帮助</string>
    <string name="mine_title_night">夜间模式</string>
    <string name="mine_title_set">设置</string>

    <string name="mine_login_hint">登录知乎，体验更多功能</string>
    <string name="mine_login_other">其他方式登录</string>

    <string name="login_title">登录</string>
    <string name="login_hint_password_title">密码登录</string>
    <string name="login_hint_nopassword_title">免密码登录</string>
    <string name="login_hint_account">请输入账号</string>
    <string name="login_hint_password">请输入密码</string>
    <string name="login_hint_repassword">请确认密码</string>
    <string name="login_hint_log">登录</string>

    <string name="register_title">注册</string>

</resources>
