<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="0px"
        android:layout_height="0px"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <requestFocus />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <ImageView
            android:id="@+id/tvFinish"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:padding="1dp"
            android:src="@mipmap/ic_cha_2" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:text="@string/register_title"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/etAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="40dp"
        android:hint="@string/login_hint_account"
        android:paddingTop="10dp"
        android:paddingBottom="20dp"
        android:textColorHint="@color/grey_400"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:hint="@string/login_hint_password"
        android:paddingTop="10dp"
        android:paddingBottom="20dp"
        android:textColorHint="@color/grey_400"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etSecondPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:hint="@string/login_hint_repassword"
        android:paddingTop="10dp"
        android:paddingBottom="20dp"
        android:textColorHint="@color/grey_400"
        android:textSize="18sp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="44dp"
        android:background="@drawable/bg_round_blue_lignt">

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/register_title"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ProgressBar
            android:id="@+id/pbLoading"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:indeterminateTint="@color/white"
            android:indeterminateTintMode="src_atop"
            android:visibility="invisible" />

    </FrameLayout>

</LinearLayout>